# rust101

find/: Cargo.toml
find/src/: lib.rs  main.rs
news/: .gitignore  Cargo.toml  newsfeed.txt
news/migrations/2023-09-22-193158_feed/: down.sql  up.sql
news/src/: lib.rs  main.rs  models.rs  parser.rs  routes.rs  schema.rs
vidbot/: Cargo.toml
vidbot/src/: lib.rs  main.rs
