[package]
name = "news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
rss = "2.0.6"
dotenv = "0.15.0"
diesel = { version = "2.1.1", features = ["postgres", "r2d2"] }
url = "2.4.1"
regex = "1.9.5"
tokio-cron-scheduler = "0.9.4"
feed-rs = "1.3"
