[package]
name = "vidbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
nanoid = "0.4"
dotenv = "0.15"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
serde = "1.0.188"
serde_json = "1.0.80"
url = "2.4.1"
bytes = "1.5"
